@@ -7,6 +7,11 @@ What's New in Python 3.3.3?
 
 *Release date: XX-Nov-2013*
 
+Library
+-------
+
+- Issue #19435: Fix directory traversal attack on CGIHttpRequestHandler.
+
 Tests
 -----
 
